Added extra content to the about page. Page was left blank without links or content.

--- a/links_and_images/pages/about.html
+++ b/links_and_images/pages/about.html
@@ -7,5 +7,27 @@
 </head>
 <body>
     <h1>About Page</h1>
+    <p>There is nothing in this about page, so I will hijack this for notes on commit messages</p>
+    <a href="../index.html" target="_self" rel="noopener noreferrer">Links Page</a>
+    <a href="../../index.html" target="_self" rel="noopener noreferrer">Home Page</a>
+    <h1>About Commit Messages</h1>
+    <p>
+        Commit Messages are <b>very</b> important. Employers will look to see if you can write them well,
+        and having a good commit message history lets you collaborate better and fix bugs faster. 
+        It also gives your brain a jog when you come back to a project that you haven't done in a while.
+    </p>
+    <h2>Differentiating bad and good commits</h2>
+    <p>
+        Bad commits are vague and unprecise. <i>Good</i> commit messages consist of a <b>subject</b> and a <b>body</b>
+        You must describe the problem, and then solve it. 
+    </p>
+    <p>
+        EG: Added missing links and added a description to logo. Readers wont read images to people with accesibility issues. 
+    </p>
+    <!-- Remember commits are different from comments on a project -->
+    <p>
+        Think of commits as a "snapshot" of the code you just uploaded or changed. This version will be saved so you can look back at it in the future.
+        Make sure to commit every time you make a meaningful change to your code. In fact, now that I am about to add this page, I need to add a commit message as well.
+    </p>
 </body>
 </html>
